# socklib

./: CMakeLists.txt  README.md  socklib.sln
example/: example.cpp  example.vcxproj
socklib/: acesock.h  clientsock.cpp  clientsock.h  serversock.cpp  serversock.h  sockdefs.h  socket.cpp  socket.h  socklib.h  socklib.vcxproj  socklib.vcxproj.filters
socklib/internal/: clientsock.cpp  clientsock.h  serversock.cpp  serversock.h  sockdefs.h  socket.cpp  socket.h  socklib.cpp  socklib.h
sockserver/: sockserver.cpp  sockserver.vcxproj  sockserver.vcxproj.filters
